# ArNosurgeDeluxeSwitchEngPatch

./: Cargo.toml  README.md
ModFiles/exefs/: main.npdm  subsdk9
ModFiles/romfs/Event/event/C11_1/: EVENT_MESSAGE_C11_1_010.ebm  EVENT_MESSAGE_C11_1_020.ebm  EVENT_MESSAGE_C11_1_030.ebm  EVENT_MESSAGE_C11_1_040.ebm  EVENT_MESSAGE_C11_1_050.ebm  EVENT_MESSAGE_C11_1_060.ebm  EVENT_MESSAGE_C11_1_070.ebm  EVENT_MESSAGE_C11_1_080.ebm  EVENT_MESSAGE_C11_1_090.ebm  EVENT_MESSAGE_C11_1_100.ebm  EVENT_MESSAGE_C11_1_110.ebm  EVENT_MESSAGE_C11_1_120.ebm  EVENT_MESSAGE_C11_1_130.ebm  EVENT_MESSAGE_C11_1_135.ebm  EVENT_MESSAGE_C11_1_140.ebm  EVENT_MESSAGE_C11_1_150.ebm  EVENT_MESSAGE_C11_1_160.ebm  EVENT_MESSAGE_C11_1_170.ebm  EVENT_MESSAGE_C11_1_180.ebm  EVENT_MESSAGE_C11_1_190.ebm  EVENT_MESSAGE_C11_1_195.ebm  EVENT_MESSAGE_C11_1_200.ebm  EVENT_MESSAGE_C11_1_210.ebm  EVENT_MESSAGE_C11_1_220.ebm  EVENT_MESSAGE_C11_1_230.ebm  EVENT_MESSAGE_C11_1_240.ebm  EVENT_MESSAGE_C11_1_250.ebm  EVENT_MESSAGE_C11_1_260.ebm  EVENT_MESSAGE_C11_1_270.ebm  EVENT_MESSAGE_C11_1_280.ebm  EVENT_MESSAGE_C11_1_290.ebm  EVENT_MESSAGE_C11_1_300.ebm  EVENT_MESSAGE_C11_1_310.ebm  EVENT_MESSAGE_C11_1_320.ebm  EVENT_MESSAGE_C11_1_330.ebm  EVENT_MESSAGE_C11_1_340.ebm  EVENT_MESSAGE_C11_1_350.ebm  EVENT_MESSAGE_C11_1_360.ebm
ModFiles/romfs/Event/event/C11_2/: EVENT_MESSAGE_C11_2_010.ebm  EVENT_MESSAGE_C11_2_020.ebm  (+24 more)
ModFiles/romfs/Saves/systemMessage/: SysInfo.xml  SysMess.xml
ModFiles/romfs/skyline/plugins/: libarnosurgedeluxeswitchengpatch.nro
src/: data.rs  lib.rs  ui.rs
src/ui/menus/: bio.rs  mod.rs
(+1625 files in other folders)
