[package]
name = "arnosurgedeluxeswitchengpatch"
version = "0.1.0"
authors = []
edition = "2018"

[package.metadata.skyline]
titleid = "01003cf0128de000" # Ar nosurge: Ode to an Unborn Star Deluxe
package-resources = [
    { local = "ModFiles/exefs", package = "atmosphere/contents/01003cf0128de000/exefs" },
    { local = "ModFiles/romfs", package = "atmosphere/contents/01003cf0128de000/romfs" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
crc32fast = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
